# oj-rs

./: .gitignore  Cargo.toml  README.md  flake.nix
.cargo/: config.toml
.github/workflows/: build_nix.yml  oj-pack.yml  solution.yml
benches/: finger_tree.rs  seg_tree.rs
benches/criterion/: 00-main.rs  cf_911g.rs  finger_tree.rs  seg_tree.rs
luogu/: Cargo.toml
src/: data_structure.rs  io.rs  lib.rs  seg_tree.rs  test.rs  traits.rs
src/data_structure/: finger_tree.rs  lct.md  lct.rs  mod.rs  ref_store.rs  seg_tree.rs
src/data_structure/seg_tree/: mod.rs  persist.rs  tree.rs
src/test/: finger_tree.rs  fingertree.rs  mod.rs  seg_tree.rs
src/traits/: foldable.rs  mod.rs  monoid.rs  semigroup.rs
tools/oj-pack/: Cargo.toml  README.md
tools/oj-pack/src/: lib.rs  main.rs
