[package]
name = "solution"
version = "0.1.0"
authors = ["zLeoAlex <z.alex.leo@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "solution"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[profile.release]
opt-level = 2 # same as codeforces runtime https://codeforces.com/blog/entry/121114

[[bench]]
name = "finger_tree"
harness = false

[[bench]]
name = "seg_tree"
harness = false
