[package]
name = "solution"
version = "0.1.0"
authors = ["zLeoAlex <z.alex.leo@outlook.com>"]
edition = "2021"

[workspace]
members = [".", "tools/oj-pack"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "solution"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[profile.release]
opt-level = 2 # same as codeforces runtime https://codeforces.com/blog/entry/121114

# Criterion provides its own benchmark main via criterion_main!, so the default
# libtest harness must be disabled.
# https://bheisler.github.io/criterion.rs/book/getting_started.html
[[bench]]
name = "criterion"
path = "benches/criterion/00-main.rs"
harness = false
