[package]
name = "oj-pack"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
cargo_metadata = "0.18"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "visit-mut"] }
prettyplease = "0.2"
